--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
          <div class="container main-nav"> 
         <nav class="main-nav">
             <a href="./index.html" class="logo list"><span>Web</span>Studio</a>
-            <div class="menu-btn"> <svg width="40" height="40">
-                <use xlink:href="./img/sprite.svg#menu"></use>
+            <div class="menu-btn" data-menu-open> <svg width="40" height="40">
+                <use xlink:href="./images/icons.svg#menu"></use>
             </svg></div>
         <ul class="site-nav list">
             <li class="item"><a href="./index.html" class=" header-link accent-link list">Студія</a></li>
@@ -30,13 +30,13 @@
 </div>
     </header>
     <div class="mobile-backdrop is-hidden" data-menu>
-        <div class="menu">
+        <div class="menu list">
             <button type="button" class="menu__btn--close" data-menu-close>
-                <svg width="18" height="18" class="menu__btn--icon">
-                    <use xlink:href="./img/sprite.svg#close"></use>
+                <svg width="40" height="40" class="menu__btn--icon">
+                    <use xlink:href="./images/icons.svg#close"></use>
                 </svg>
             </button>
-            <ul class="menu__nav">
+            <ul class="menu__nav list">
                 <li class="menu__nav--item">
                     <a class="current" href="./index.html">Студия</a>
                 </li>
@@ -47,19 +47,19 @@
                     <a href="#address">Контакты</a>
                 </li>
             </ul>
-            <ul class="menu__contacts">
+            <ul class="menu__contacts list">
                 <li class="menu__contacts--item menu__contacts--item--phone">
                     <a href="tel:380961111111">
                         +38 096 111 11 11
                     </a>
                 </li>
-                <li class="menu__contacts--item">
+                <li class="menu__contacts--item list">
                     <a href="mailto:info@devstudio.com">
                         info@devstudio.com
                     </a>
                 </li>
             </ul>
-            <ul class="menu__socials">
+            <ul class="menu__socials list">
                 <li class="menu__socials--item">
                     <a href="#">
                         Instagram
@@ -297,6 +297,7 @@
 </main> 
 <footer class="footer"> 
     <div class="container flex-ftr">
+        <div class="base">
     <div class="ftr-address">
     <a href="./index.html" class="footer-logo list"><span>Web</span>Studio</a>
     <address>
@@ -337,10 +338,10 @@
            </svg>
        </a>
       </li>
-   </ul></div>
+   </ul></div></div>
    <form class="ftr-form list">
-    <h2 class="ftr-title">Підпишіться на розсилку</h2>
     <div class="ftr-group list">
+        <h2 class="ftr-title">Підпишіться на розсилку</h2>
     <input type="email" name="mail" id="mail" placeholder="E-mail">
     <button class="button btn-form-ftr" type="submit">
         Підписатися <svg class="ftr-form-icon" Width="24px" Height="24px">
