--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
     <title>portfolio</title>
 </head>
 <body>
-    <!-- <header class="header">
+   <header class="header">
         <div class="container main-nav">
         <nav class="main-nav">
             <a href="./index.html" class="logo list"><span>Web</span>Studio</a>
@@ -25,9 +25,9 @@
             <li class="item"><a href="tel:+380961111111"class="item list"><svg class="phone-icon link"><use href="./images/icons.svg#phone"></use></svg>+38 096 111 11 11</a></li>
     </ul>
 </div>
-    </header> -->
+    </header>
     <main>
-        <!-- <section class="section-project list">
+        <section class="section-project list">
             <div class="container">
             <h1 class="hidden">Портфолио</h1>
             <ul class="button-nav list">
@@ -37,7 +37,7 @@
            <li class="item"><button type="button">Дизайн</button></li> 
            <li class="item"><button type="button">Маркетинг</button></li> 
         </ul>
-        <ul class="project-list list"> -->
+        <ul class="project-list list">
             <li class="project">
                 <a href="#"class="project-block list"><div class="project-thumb" >
                 <img class="project-img" src="./images/project 1.jpg" alt="Проект">
@@ -115,8 +115,9 @@
     </div>
     </section>
     </main>
-    <!-- <footer class="footer">
+   <footer class="footer">
         <div class="container flex-ftr">
+            <div class="base">
         <div class="ftr-address">
         <a href="./index.html" class="footer-logo list"><span>Web</span>Studio</a>
         <address>
@@ -157,7 +158,7 @@
                </svg>
            </a>
           </li>
-       </ul></div>
+       </ul></div></div>
        <form class="ftr-form list">
         <h2 class="ftr-title">Підпишіться на розсилку</h2>
         <div class="ftr-group list">
@@ -170,7 +171,7 @@
        </form>
     </div>
     
-    </footer> -->
+    </footer>
     <script src="./js/mobile-menu.js"></script>
 </body>
 </html>
